--- a/index.html
+++ b/index.html
@@ -12,11 +12,13 @@
       <div class="logo">🧴</div>
       <div>
         <div class="title">FragShop</div>
+        <div class="sub">Inventory pulled live from GitHub Issues</div>
       </div>
     </div>
 
     <div class="right">
       <button id="refreshBtn" class="btn">Refresh</button>
+      <a id="inventoryRepoLink" class="btn ghost" target="_blank" rel="noreferrer">Inventory Repo</a>
     </div>
   </header>
 
@@ -70,4 +72,3 @@
   <script src="app.js"></script>
 </body>
 </html>
-
